--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "coffee-script": "^1.8.0",
-    "gulp-ect": "^1.3.1"
+    "gulp-ect": "^1.3.1",
+    "gulp-plumber": "^0.6.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
