--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "coffee-script": "^1.8.0",
     "gulp-ect": "^1.3.1",
-    "gulp-plumber": "^0.6.6"
+    "gulp-plumber": "^0.6.6",
+    "gulp.spritesmith": "^2.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
