--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "coffee-script": "^1.8.0",
     "gulp-ect": "^1.3.1",
     "gulp-plumber": "^0.6.6",
+    "gulp-tsc": "^0.9.2",
     "gulp.spritesmith": "^2.0.1"
   },
   "scripts": {
