--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "run-sequence": "^1.0.2"
   },
   "devDependencies": {
+    "browserify": "^8.1.1",
     "coffee-script": "^1.8.0",
     "gulp-ect": "^1.3.1",
     "gulp-plumber": "^0.6.6",
