--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "browserify": "^8.1.1",
     "coffee-script": "^1.8.0",
     "gulp-ect": "^1.3.1",
+    "gulp-karma": "0.0.4",
     "gulp-plumber": "^0.6.6",
     "gulp-tsc": "^0.9.2",
-    "gulp.spritesmith": "^2.0.1"
+    "gulp-util": "^3.0.3",
+    "gulp.spritesmith": "^2.0.1",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
