--- a/package.json
+++ b/package.json
@@ -20,15 +20,23 @@
     "browserify": "^8.1.1",
     "coffee-script": "^1.8.0",
     "gulp-ect": "^1.3.1",
+    "gulp-iconfont": "^1.0.0",
+    "gulp-iconfont-css": "0.0.9",
+    "gulp-if": "^1.2.5",
     "gulp-karma": "0.0.4",
+    "gulp-load-plugins": "^0.8.0",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-svg-symbols": "^0.3.1",
+    "gulp-svgmin": "^1.1.0",
     "gulp-tsc": "^0.9.2",
     "gulp-util": "^3.0.3",
     "gulp.spritesmith": "^2.0.1",
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2"
+    "karma-requirejs": "^0.2.2",
+    "svgo": "^0.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
